--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "cors": "^2.8.4",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-validation": "^1.0.2",
     "helmet": "^3.8.1",
+    "joi": "^11.0.1",
+    "jsonwebtoken": "^8.0.1",
     "mongoose": "^4.11.11",
     "morgan": "~1.8.1",
     "qiniu": "^7.0.8",
