--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node server"
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -20,5 +21,8 @@
     "morgan": "~1.8.1",
     "qiniu": "^7.1.0",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.5"
   }
 }
